--- a/src/App.less
+++ b/src/App.less
@@ -1,50 +1,20 @@
 .App {
-    margin:0.2em;
-    padding:0.2em;
     min-width: 300px;
 
-    header {
-        border-bottom: 1px dotted grey;
-        margin-bottom: 1.2em;
-
-        img {
-            float: left;
-            margin:1em;
-            width:4em;
-        }
-        h2 {
-            height:2.4em;
-            margin:0;
-            padding-top: 1em;
-            padding-bottom: 0;
-        }
+    main {
+        margin-top: 2em;
     }
+    .list-books {
+        margin-bottom: 5em;
 
-    .toolbar {
-        background-color: #ececec;
-        margin-top:0.5em;
-        margin-bottom:0.5em;
-        padding-left:1em;
-        padding-right:1em;
-        padding-top: 0.5em;;
-        padding-bottom: 0.5em;
     }
-
-    .list-books .item-book {
-        padding-bottom:0.2em;
-        margin-bottom:0.2em;
-        border-bottom: 1px solid rgb(213, 213, 213);
-
-        &:hover {
-            background-color: rgb(255, 245, 231);
-        }
-        .info .title {
-            font-weight: bold;
-            font-size: 1.2em;
-        }
-        .actions {
-            text-align: right;
-        }
+    .btn-add-book {
+        position: fixed;
+        bottom: 1em;
+        right: 1em;
+    }
+    .form-book {
+        margin-top: 2em;
     }
 
 }
