--- a/src/App.less
+++ b/src/App.less
@@ -3,6 +3,7 @@
 
     main {
         margin-top: 2em;
+        margin-bottom: 5em;
     }
     .list-books {
         margin-bottom: 5em;
@@ -13,7 +14,8 @@
         bottom: 1em;
         right: 1em;
     }
-    .form-book {
+    .form-book,
+    .form-settings {
         margin-top: 2em;
     }
 
