move delete book button to book detail view

--- a/src/App.less
+++ b/src/App.less
@@ -9,7 +9,8 @@
         margin-bottom: 5em;
 
     }
-    .btn-add-book {
+    .btn-add-book,
+    .btn-delete-book {
         position: fixed;
         bottom: 1em;
         right: 1em;
