--- a/src/App.less
+++ b/src/App.less
@@ -19,5 +19,27 @@
     .form-settings {
         margin-top: 2em;
     }
+}
 
+.video-container {
+    width: 200px;
+    margin-left: 2em;
+}
+.inner-container {
+    border: 1px solid black;
+    display: inline-block;
+    position: relative;
+}
+.video-overlay {
+    position: absolute;
+    width:100%;
+    height:100%;
+    left: 0px;
+    top: 0px;
+    margin: 0px;
+    padding: 5px 5px;
+    font-size: 20px;
+    font-family: Helvetica;
+    color: #FFF;
+    background-color: rgba(167, 11, 11, 0.3);
 }
