--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,11 @@
+body {
+    background-color: aqua;
+}
 .scale-in-ver-top {
     -webkit-animation: scale-in-ver-top 0.5s
         cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
     animation: scale-in-ver-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+    margin-bottom: 1em;;
 }
 
 /* ----------------------------------------------
