--- a/src/App.less
+++ b/src/App.less
@@ -73,6 +73,11 @@ body {
     .form-settings {
         margin-top: 2em;
     }
+    .create-account-link {
+        width: 100%;
+        margin-top: 0.6em;
+        text-align: right;
+    }
 }
 
 .video-container {
