--- a/src/App.less
+++ b/src/App.less
@@ -78,6 +78,14 @@ body {
         margin-top: 0.6em;
         text-align: right;
     }
+    .about main {
+        text-align: center;
+        margin-top: 150px;
+
+        img.book-icon {
+            width:80px;
+        }
+    }
 }
 
 .video-container {
