add build TS and bump version

--- a/src/App.less
+++ b/src/App.less
@@ -86,6 +86,13 @@ body {
             width:80px;
         }
     }
+
+    .version-info {
+    }
+    .build-ts {
+        font-size: 0.7em;
+        color:gray;
+    }
 }
 
 .video-container {
